# inf8601-cours

05-openmp/: CMakeLists.txt  Chap05-OpenMP-Exercices.tex  Chap05-OpenMP.tex
05-openmp/include/: parallel_deque.h  utils.h
05-openmp/src/: 01-omp-parallel.cpp  02-omp-parallel-critical.cpp  03-omp-teams.cpp  04-omp-sections.cpp  05-omp-for.cpp  06-omp-scan.cpp  06-omp-task.cpp  07-omp-task.cpp  08-omp-simd.cpp
06-opencl/: 01-init-opencl.c  02-simple-kernel.cl  02-simple-kernel.cpp  04-cuda-simple-kernel.cu  CMakeLists.txt  Chap06-OpenCL.tex
06-opencl/include/: utils.h
07-heterogenes/: CMakeLists.txt  Chap07-HSA.tex
